import { Controller } from '@nestjs/common';
import { GrpcMethod } from '@nestjs/microservices';
import { UserService } from './user.service';

@Controller()
export class UserGrpcController {
  constructor(private readonly userService: UserService) {}

  // ==================== 用户管理 ====================

  @GrpcMethod('UserService', 'FindById')
  async findById(data: { id: string }) {
    // TODO: 实现查找用户逻辑
    return {
      id: data.id,
      username: 'test_user',
      email: 'test@example.com',
      // ... 其他字段
    };
  }

  @GrpcMethod('UserService', 'FindByEmail')
  async findByEmail(data: { email: string }) {
    // TODO: 实现通过邮箱查找用户逻辑
    return {
      id: 'user_123',
      email: data.email,
      username: 'test_user',
      // ... 其他字段
    };
  }

  @GrpcMethod('UserService', 'FindMany')
  async findMany(data: {
    page?: number;
    limit?: number;
    search?: string;
    role?: string;
    organizationId?: string;
    departmentId?: string;
  }) {
    // TODO: 实现查询用户列表逻辑
    return {
      users: [],
      total: 0,
      page: data.page || 1,
      limit: data.limit || 10,
    };
  }

  @GrpcMethod('UserService', 'Create')
  async create(data: {
    username: string;
    email: string;
    password: string;
    nickname?: string;
    phone?: string;
    avatar?: string;
    roleId?: string;
    organizationId?: string;
    departmentId?: string;
  }) {
    // TODO: 实现创建用户逻辑
    return {
      id: 'new_user_id',
      username: data.username,
      email: data.email,
      // ... 其他字段
    };
  }

  @GrpcMethod('UserService', 'Update')
  async update(data: any) {
    // TODO: 实现更新用户逻辑
    return {
      id: data.id,
      // ... 更新后的字段
    };
  }

  @GrpcMethod('UserService', 'Delete')
  async delete(data: { id: string }) {
    // TODO: 实现删除用户逻辑（软删除）
    return {
      success: true,
      message: '用户已删除',
    };
  }

  // ==================== 认证授权 ====================

  @GrpcMethod('UserService', 'ValidateCredentials')
  async validateCredentials(data: { email: string; password: string }) {
    // TODO: 实现验证用户凭证逻辑
    return {
      accessToken: 'jwt_access_token',
      refreshToken: 'jwt_refresh_token',
      user: {
        id: 'user_123',
        email: data.email,
        // ... 其他用户信息
      },
    };
  }

  @GrpcMethod('UserService', 'ValidateToken')
  async validateToken(data: { token: string }) {
    // TODO: 实现验证 JWT Token 逻辑
    return {
      isValid: true,
      userId: 'user_123',
      email: 'test@example.com',
      role: 'student',
    };
  }

  @GrpcMethod('UserService', 'RefreshToken')
  async refreshToken(data: { refreshToken: string }) {
    // TODO: 实现刷新 Token 逻辑
    return {
      accessToken: 'new_jwt_access_token',
      refreshToken: 'new_jwt_refresh_token',
      user: {
        // ... 用户信息
      },
    };
  }

  // ==================== 角色权限 ====================

  @GrpcMethod('UserService', 'AssignRole')
  async assignRole(data: { userId: string; roleId: string }) {
    // TODO: 实现分配角色逻辑
    return {
      id: data.userId,
      roleId: data.roleId,
      // ... 其他字段
    };
  }

  @GrpcMethod('UserService', 'GetUserPermissions')
  async getUserPermissions(data: { userId: string }) {
    // TODO: 实现获取用户权限逻辑
    return {
      permissions: [
        'exam:create',
        'exam:read',
        'question:create',
        'question:read',
      ],
    };
  }

  @GrpcMethod('UserService', 'CheckPermission')
  async checkPermission(data: { userId: string; permission: string }) {
    // TODO: 实现检查用户权限逻辑
    return {
      hasPermission: true,
    };
  }

  // ==================== 组织架构 ====================

  @GrpcMethod('UserService', 'GetUserOrganization')
  async getUserOrganization(data: { userId: string }) {
    // TODO: 实现获取用户组织信息逻辑
    return {
      id: 'org_123',
      name: '测试企业',
      code: 'TEST_ORG',
      department: {
        id: 'dept_123',
        name: '技术部',
        code: 'TECH',
        parentId: null,
      },
    };
  }

  @GrpcMethod('UserService', 'UpdateUserDepartment')
  async updateUserDepartment(data: { userId: string; departmentId: string }) {
    // TODO: 实现更新用户部门逻辑
    return {
      id: data.userId,
      departmentId: data.departmentId,
      // ... 其他字段
    };
  }
}

